[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikidata_dl"
description = 'Download data from Wikidata based on input SPARQL query.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ramiro Gómez", email = "code@ramiro.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'httpx',
  'python-dateutil',
  'wptools',
]
dynamic = ["version"]
keywords = [
  'wikidata',
  'download',
  'dl',
  'command line',
  'cli',
  'sparql',
]

[project.scripts]
wikidata-dl = "wikidata_dl.cli:main"

[project.urls]
Documentation = "https://github.com/yaph/wikidata-dl#readme"
Issues = "https://github.com/yaph/wikidata_dl/issues"
Source = "https://github.com/yaph/wikidata-dl"

[tool.hatch.version]
path = "wikidata_dl/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "flake8",
  "ipdb",
  "mypy",
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=wikidata-dl --cov=tests"
no-cov = "cov --no-cov"
qa = "flake8 wikidata_dl tests"
testcli = "wikidata_dl/cli.py --items tests/queries/continents-on-earth.sparql"
typecheck = "mypy -p wikidata_dl"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "wikidata_dl/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]